basement/traefik/04-traefik-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nft-meta
spec:
  ports:
    - name: http
      port: 30100
      targetPort: 30100
    - name: grpc
      port: 30101
      targetPort: 30101
    - name: healthz
      port: 30102
      targetPort: 30102
  selector:
    app: nft-meta
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nft-meta-ui
  namespace: default
  # namespace: kube-system
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nft-meta
            port:
              number: 30100
